re PR tree-optimization/50412 (gfortran -Ofast ICE in vect_do_peeling_for_loop_bound)

PR tree-optimization/50412
        * tree-vect-data-refs.c (vect_analyze_group_access): Fail for
        acceses that require epilogue loop if vectorizing outer loop.

From-SVN: r178940