gcc/tree-vect-data-refs.c
@@ -2060,6 +2060,10 @@ vect_analyze_group_access (struct data_reference *dr)
   HOST_WIDE_INT dr_step = TREE_INT_CST_LOW (step);
   HOST_WIDE_INT stride, last_accessed_element = 1;
   bool slp_impossible = false;
+  struct loop *loop = NULL;
+
+  if (loop_vinfo)
+    loop = LOOP_VINFO_LOOP (loop_vinfo);
 
   /* For interleaving, STRIDE is STEP counted in elements, i.e., the size of the
      interleaving group (including gaps).  */
@@ -2090,11 +2094,18 @@ vect_analyze_group_access (struct data_reference *dr)
 
 	  if (loop_vinfo)
 	    {
-	      LOOP_VINFO_PEELING_FOR_GAPS (loop_vinfo) = true;
-
 	      if (vect_print_dump_info (REPORT_DETAILS))
 		fprintf (vect_dump, "Data access with gaps requires scalar "
 				    "epilogue loop");
+              if (loop->inner)
+                {
+                  if (vect_print_dump_info (REPORT_DETAILS))
+                    fprintf (vect_dump, "Peeling for outer loop is not"
+                                        " supported");
+                  return false;
+                }
+
+              LOOP_VINFO_PEELING_FOR_GAPS (loop_vinfo) = true;
 	    }
 
 	  return true;
@@ -2277,10 +2288,17 @@ vect_analyze_group_access (struct data_reference *dr)
       /* There is a gap in the end of the group.  */
       if (stride - last_accessed_element > 0 && loop_vinfo)
 	{
-	  LOOP_VINFO_PEELING_FOR_GAPS (loop_vinfo) = true;
 	  if (vect_print_dump_info (REPORT_DETAILS))
 	    fprintf (vect_dump, "Data access with gaps requires scalar "
 				"epilogue loop");
+          if (loop->inner)
+            {
+              if (vect_print_dump_info (REPORT_DETAILS))
+                fprintf (vect_dump, "Peeling for outer loop is not supported");
+              return false;
+            }
+
+          LOOP_VINFO_PEELING_FOR_GAPS (loop_vinfo) = true;
 	}
     }
 
